Fix layout-shift on mobile

--- a/src/assets/presentation.css
+++ b/src/assets/presentation.css
@@ -249,7 +249,6 @@
     justify-content: flex-start;
   }
   #bio {
-    height: 100vh;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -257,6 +256,10 @@
     position: relative;
     width: 100%;
     margin-left: 0;
+    height: 100vh;
+    min-height: 100vh;
+    min-height: fill-available;
+    min-height: -webkit-fill-available;
   }
   #short-description{
     padding: 15px;
