--- a/src/assets/welcome.css
+++ b/src/assets/welcome.css
@@ -233,3 +233,11 @@
   
   }
   }
+
+  @media screen and (max-width: 450px){
+    #welcome{
+      min-height: 100vh;
+      min-height: fill-available;
+      min-height: -webkit-fill-available;
+    }
+  }
